--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^1.0.0-next.31",
+    "@sveltejs/adapter-netlify": "^1.0.0-next.50",
     "@sveltejs/kit": "^1.0.0-next.294",
     "autoprefixer": "^10.4.2",
     "daisyui": "^2.6.0",
