--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "svelte": "^3.46.0",
     "tailwindcss": "^3.0.23"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "postcss-import": "^14.0.2",
+    "svelte-icons": "^2.1.0",
+    "svelte-simple-datatables": "^0.2.3"
+  }
 }
